--- a/style.css
+++ b/style.css
@@ -20,3 +20,16 @@ nav{
     top: 15px;
     right: 20px;
 }
+
+.nav-items{
+    display: flex;
+    list-style: none;
+    gap: 10px;
+}
+
+.nav-items li a{
+    text-decoration: none;
+    color: #707070;
+    font-weight: 500;
+    font-size: 16px;
+}
