--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+}
+
 .container{
     max-width: 1280px;
     margin: auto;
@@ -7,6 +11,7 @@ nav{
     display: flex;
     justify-content: space-between;
 }
+
 .search-parent{
     position: relative;
     color: #BABABA;  
