--- a/style.css
+++ b/style.css
@@ -134,3 +134,57 @@ nav{
 .category-card-3{
     background: linear-gradient(170.38deg, rgb(66, 137, 255) 15.416%,rgb(63, 7, 248) 74.29%);
 }
+
+/* Shoes and Bag Section */
+.shoes-backpack-parent{
+    background: rgb(244, 244, 244);
+}
+
+.shoes-backpack-section-title-parent{
+    display: flex;
+    justify-content: space-between;
+}
+
+.shoes-backpack-section-title-parent h2{
+    font-weight: 600;
+    font-size: 36px;
+}
+
+.shoes-backpack-section-title-parent p{
+    font-size: 20px;
+    color: #FF9D00;
+}
+
+/* Shoes */
+.shoes-section{
+    padding: 50px 0;
+}
+
+.shoe-card-container{
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+}
+
+.shoe-card{
+    background-color: white;
+    border-radius: 10px;
+    text-align: center;
+    padding: 25px;
+}
+
+.card-price{
+    display: block;
+    font-weight: 600;
+    font-size: 22px;
+    margin-bottom: 12px;
+}
+
+.shoe-card img{
+    width: 336px;
+    height: 202px;    
+}
+
+.shoe-card .panda-btn{
+    background: black;
+}
