--- a/style.css
+++ b/style.css
@@ -188,3 +188,28 @@ nav{
 .shoe-card .panda-btn{
     background: black;
 }
+
+
+/* Contact */
+.contact-us-parent{
+    background: rgb(255, 242, 241);
+    text-align: center;
+    padding: 35px 20px;
+    margin: 35px auto;
+    border-radius: 15px;
+}
+
+.contact-inp-btn-parent{
+    display: flex;
+    justify-content: center;
+}
+
+.contact-inp-btn-parent input{
+    border: none;
+    padding: 15px 152px;
+}
+
+.contact-inp-btn-parent .panda-btn{
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
