--- a/style.css
+++ b/style.css
@@ -1,213 +1,229 @@
 /* Common CSS */
-*{
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-    scroll-behavior: smooth;
+* {
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  scroll-behavior: smooth;
 }
 
-.container{
-    max-width: 1280px;
-    margin: auto;
+.container {
+  max-width: 1280px;
+  margin: auto;
 }
 
-.panda-btn{
-    border-radius: 6px;
-    background: linear-gradient(180.00deg, rgb(255, 88, 155) -0.006%,rgb(255, 19, 111) 99.994%);
-    padding: 15px 35px;
-    border: none;
-    color: white;
-    font-weight: 500;
+.panda-btn {
+  border-radius: 6px;
+  background: linear-gradient(
+    180deg,
+    rgb(255, 88, 155) -0.006%,
+    rgb(255, 19, 111) 99.994%
+  );
+  padding: 15px 35px;
+  border: none;
+  color: white;
+  font-weight: 500;
 }
 
-.common-section-title{
-    font-weight: 600;
-    font-size: 36px;
+.common-section-title {
+  font-weight: 600;
+  font-size: 36px;
 }
 
 /* Custom CSS */
-nav{
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 0;
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0;
 }
 
-.search-parent{
-    position: relative;
-    color: #BABABA;  
+.search-parent {
+  position: relative;
+  color: #bababa;
 }
 
-.search-parent input{
-    border-radius: 66px;
-    padding: 15px 30px;
-    width: 500px;
-    background-color: rgb(241, 241, 241);
-    border: none;
+.search-parent input {
+  border-radius: 66px;
+  padding: 15px 30px;
+  width: 500px;
+  background-color: rgb(241, 241, 241);
+  border: none;
 }
 
-.search-parent i{
-    position: absolute;
-    top: 15px;
-    right: 20px;
+.search-parent i {
+  position: absolute;
+  top: 15px;
+  right: 20px;
 }
 
-.nav-items{
-    display: flex;
-    list-style: none;
-    gap: 10px;
+.nav-items {
+  display: flex;
+  list-style: none;
+  gap: 10px;
 }
 
-.nav-items li a{
-    text-decoration: none;
-    color: #707070;
-    font-weight: 500;
-    font-size: 16px;
+.nav-items li a {
+  text-decoration: none;
+  color: #707070;
+  font-weight: 500;
+  font-size: 16px;
 }
 
 /* Banner */
-.banner{
-    background: rgb(254, 234, 233);
-    display: flex;
-    justify-content: space-between;
-    gap: 5px;
-    align-items: center;
-    padding: 28px;
-    border-radius: 10px;
-    margin-top: 25px;
+.banner {
+  background: rgb(254, 234, 233);
+  display: flex;
+  justify-content: space-between;
+  gap: 5px;
+  align-items: center;
+  padding: 28px;
+  border-radius: 10px;
+  margin-top: 25px;
 }
 
-.banner h2{
-    color: rgb(31, 31, 31);
-    font-size: 56px;
-    font-weight: 700;   
+.banner h2 {
+  color: rgb(31, 31, 31);
+  font-size: 56px;
+  font-weight: 700;
 }
 
-.banner p{
-    color: #4E4E4E;
-    max-width: 500px;
+.banner p {
+  color: #4e4e4e;
+  max-width: 500px;
 }
 
-.banner img{
-    width: 402px;
-    height: 378px;
+.banner img {
+  width: 402px;
+  height: 378px;
 }
 
-.banner-price{
-    color: #FF136F;
-    font-weight: bold;
-    font-size: 52px;
-    display: block;
-    margin-bottom: 0;
+.banner-price {
+  color: #ff136f;
+  font-weight: bold;
+  font-size: 52px;
+  display: block;
+  margin-bottom: 0;
 }
 
 /* Category */
-.categories-card-container{
-    display: flex;
-    gap: 26px;
-    width: 100%;
+.categories-card-container {
+  display: flex;
+  gap: 26px;
+  width: 100%;
 }
 
-.category-card{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 4px;
-    padding: 20px;
-    border-radius: 10px;
-    flex: 1;
+.category-card {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 4px;
+  padding: 20px;
+  border-radius: 10px;
+  flex: 1;
 }
 
-.category-card h3{
-    color: white;
-    font-weight: bold;
-    font-size: 30px;
+.category-card h3 {
+  color: white;
+  font-weight: bold;
+  font-size: 30px;
 }
 
-.category-card-1{
-    background: linear-gradient(151.85deg, rgb(255, 156, 53) 14.537%,rgb(255, 208, 25) 84.486%);
+.category-card-1 {
+  background: linear-gradient(
+    151.85deg,
+    rgb(255, 156, 53) 14.537%,
+    rgb(255, 208, 25) 84.486%
+  );
 }
 
-.category-card-2{
-    background: linear-gradient(180.00deg, rgb(255, 88, 155) -0.006%,rgb(255, 19, 111) 99.994%);
+.category-card-2 {
+  background: linear-gradient(
+    180deg,
+    rgb(255, 88, 155) -0.006%,
+    rgb(255, 19, 111) 99.994%
+  );
 }
 
-.category-card-3{
-    background: linear-gradient(170.38deg, rgb(66, 137, 255) 15.416%,rgb(63, 7, 248) 74.29%);
+.category-card-3 {
+  background: linear-gradient(
+    170.38deg,
+    rgb(66, 137, 255) 15.416%,
+    rgb(63, 7, 248) 74.29%
+  );
 }
 
 /* Shoes and Bag Section */
-.shoes-backpack-parent{
-    background: rgb(244, 244, 244);
+.shoes-backpack-parent {
+  background: rgb(244, 244, 244);
 }
 
-.shoes-backpack-section-title-parent{
-    display: flex;
-    justify-content: space-between;
+.shoes-backpack-section-title-parent {
+  display: flex;
+  justify-content: space-between;
 }
 
-.shoes-backpack-section-title-parent h2{
-    font-weight: 600;
-    font-size: 36px;
+.shoes-backpack-section-title-parent h2 {
+  font-weight: 600;
+  font-size: 36px;
 }
 
-.shoes-backpack-section-title-parent p{
-    font-size: 20px;
-    color: #FF9D00;
+.shoes-backpack-section-title-parent p {
+  font-size: 20px;
+  color: #ff9d00;
 }
 
 /* Shoes */
-.shoes-section{
-    padding: 50px 0;
+.shoes-section {
+  padding: 50px 0;
 }
 
-.shoe-card-container{
-    display: flex;
-    justify-content: space-between;
-    gap: 15px;
+.shoe-card-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 15px;
 }
 
-.shoe-card{
-    background-color: white;
-    border-radius: 10px;
-    text-align: center;
-    padding: 25px;
+.shoe-card {
+  background-color: white;
+  border-radius: 10px;
+  text-align: center;
+  padding: 25px;
 }
 
-.card-price{
-    display: block;
-    font-weight: 600;
-    font-size: 22px;
-    margin-bottom: 12px;
+.card-price {
+  display: block;
+  font-weight: 600;
+  font-size: 22px;
+  margin-bottom: 12px;
 }
 
-.shoe-card img{
-    width: 336px;
-    height: 202px;    
+.shoe-card img {
+  width: 336px;
+  height: 202px;
 }
 
-.shoe-card .panda-btn{
-    background: black;
+.shoe-card .panda-btn {
+  background: black;
 }
 
 /* Contact */
-.contact-us-parent{
-    background: rgb(255, 242, 241);
-    text-align: center;
-    padding: 35px 20px;
-    margin: 35px auto;
-    border-radius: 15px;
+.contact-us-parent {
+  background: rgb(255, 242, 241);
+  text-align: center;
+  padding: 35px 20px;
+  margin: 35px auto;
+  border-radius: 15px;
 }
 
-.contact-inp-btn-parent{
-    display: flex;
-    justify-content: center;
+.contact-inp-btn-parent {
+  display: flex;
+  justify-content: center;
 }
 
-.contact-inp-btn-parent input{
-    border: none;
-    padding: 15px 152px;
+.contact-inp-btn-parent input {
+  border: none;
+  padding: 15px 152px;
 }
 
-.contact-inp-btn-parent .panda-btn{
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
+.contact-inp-btn-parent .panda-btn {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
